# marinade-sdk

libs/anchor-adapter/: Cargo.toml
libs/anchor-adapter/src/: lib.rs
libs/marinade-sdk/: Cargo.toml
libs/marinade-sdk-macro/: Cargo.toml
libs/micro-anchor/: Cargo.toml
programs/example/: Cargo.toml
